[#664] FIX: Image blocks were oversized
* Fixed issue where image blocks viewed with the CMS were too big for their space. Works with both 'too large' and 'too small' images.

--- a/app/assets/stylesheets/cms/styles/_images.css.scss
+++ b/app/assets/stylesheets/cms/styles/_images.css.scss
@@ -4,6 +4,13 @@ img {
 	height: auto;
 	display: inline-block;
 }
+
+// Image blocks viewed within the CMS shouldn't be 100% width.
+img[data-type="image_block"] {
+  width: auto;
+  max-width: 100%;
+}
+
 .img-rounded {
 	@include border-radius(6px);
 }
